# personal-accounting

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  env.django.example
source/: env.example  pyproject.toml
source/custom_logging/: config.py  middleware.py
source/expenses/: __init__.py  admin.py  choices.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
source/expenses/filters/: __init__.py  backends.py  exceptions.py  swagger.py
source/expenses/migrations/: 0001_initial.py  0002_alter_expense_receipts_alter_expense_total_amount.py  0003_alter_expense_name_remove_expense_receipts_and_more.py  0004_alter_expense_total_amount.py  0005_remove_expense_receipts_receipt_expense.py
source/expenses/serializers/: __init__.py  expenses.py  purchases.py  receipt_items.py  receipts.py
source/expenses/utils/: __init__.py  receipts.py
source/expenses/validators/: __init__.py  receipt_items.py
source/incomes/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
source/incomes/migrations/: 0001_initial.py  0002_alter_incometransaction_source.py  0003_alter_incomesource_unique_together.py  0004_alter_incometransaction_taxes.py
source/incomes/utils/: __init__.py  counting.py  views.py
source/incomes/views/: __init__.py  base.py  income_sources_views.py  income_taxes_views.py  (+1 more)
source/personal_accounting/: celery.py  settings.py  throttling.py  urls.py  wsgi.py
source/users/: admin.py  exceptions.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
(+4 files in other folders)
